--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item dropdown pe-4">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown">MENS</a>
+              <a class="nav-link dropdown-toggle" href="list.html" id="dropdown01" data-bs-toggle="dropdown01">MENS</a>
               <div class="dropdown-menu rounded-0" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Shirts</a>
                 <a class="dropdown-item" href="#">Outerwear</a>
@@ -65,7 +65,7 @@
               </div>
             </li>
             <li class="nav-item dropdown pe-4">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown">PREMIUM</a>
+              <a class="nav-link dropdown-toggle" href="details.html" id="dropdown" data-bs-toggle="dropdown">DETAILS</a>
               <div class="dropdown-menu rounded-0" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">View All</a>
               </div>
@@ -79,7 +79,7 @@
               <a class="nav-link text-uppercase" href="#">Search</a>
             </li>
             <li class="nav-item text-uppercase">
-              <a class="nav-link" href="#">Cart(0)</a>
+              <a class="nav-link" href="cart.html">Cart(0)</a>
             </li>
           </ul>
         </div>
